fix markup, update component js

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -59,27 +59,27 @@
                         <ul>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.projects-link }}" {% if page.menu-data-href %} data-href="#section-work" {% endif %}>
-                                    {% t index.navbar-projects %}
+                                    <div>{% t index.navbar-projects %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.dfinity-link }}" {% if page.menu-data-href %} data-href="#section-research" {% endif %}>
-                                    {% t index.navbar-research %}
+                                    <div>{% t index.navbar-research %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.dfinity-link }}" {% if page.menu-data-href %} data-href="#section-dfinity" {% endif %}>
-                                    {% t index.dfinity-title %}
+                                    <div>{% t index.dfinity-title %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
-                                    {% t index.navbar-team %}
+                                    <div>{% t index.navbar-team %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.investors-link }}" {% if page.menu-data-href %} data-href="#section-investors" {% endif %}>
-                                    {% t index.navbar-investment %}
+                                    <div>{% t index.navbar-investment %}</div>
                                 </a>
                             </li>
                             <li class="sub-menu">
