--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -58,28 +58,28 @@
 
                         <ul>
                             <li class="primary-menu-item">
-                                <a href="{{ base }}/{{ page.projects-link }}" {% if page.menu-data-href %} data-href="#section-work" {% endif %}>
-                                    <div>{% t index.navbar-projects %}</div>
+                                <a href="{{ base }}/{{ page.projects-link }}" data-href="#section-work">
+                                    <div> {% t index.navbar-projects %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
-                                <a href="{{ base }}/{{ page.dfinity-link }}" {% if page.menu-data-href %} data-href="#section-research" {% endif %}>
-                                    <div>{% t index.navbar-research %}</div>
+                                <a href="{{ base }}/{{ page.dfinity-link }}" data-href="#section-research">
+                                    <div> {% t index.navbar-research %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
-                                <a href="{{ base }}/{{ page.dfinity-link }}" {% if page.menu-data-href %} data-href="#section-dfinity" {% endif %}>
-                                    <div>{% t index.dfinity-title %}</div>
+                                <a href="{{ base }}/{{ page.dfinity-link }}" data-href="#section-dfinity">
+                                    <div> {% t index.dfinity-title %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
-                                <a href="{{ base }}/{{ page.team-link }}" {% if page.menu-data-href %} data-href="#section-team" {% endif %}>
-                                    <div>{% t index.navbar-team %}</div>
+                                <a href="{{ base }}/{{ page.team-link }}" data-href="#section-team">
+                                    <div> {% t index.navbar-team %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
-                                <a href="{{ base }}/{{ page.investors-link }}" {% if page.menu-data-href %} data-href="#section-investors" {% endif %}>
-                                    <div>{% t index.navbar-investment %}</div>
+                                <a href="{{ base }}/{{ page.investors-link }}" data-href="#section-investors">
+                                    <div> {% t index.navbar-investment %}</div>
                                 </a>
                             </li>
                             <li class="sub-menu">
