--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -59,27 +59,27 @@
                         <ul>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.projects-link }}" data-href="#section-work">
-                                    <div> {% t index.navbar-projects %}</div>
+
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.dfinity-link }}" data-href="#section-research">
-                                    <div> {% t index.navbar-research %}</div>
+                                    <div>{% t index.navbar-research %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.dfinity-link }}" data-href="#section-dfinity">
-                                    <div> {% t index.dfinity-title %}</div>
+                                    <div>{% t index.dfinity-title %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.team-link }}" data-href="#section-team">
-                                    <div> {% t index.navbar-team %}</div>
+                                    <div>{% t index.navbar-team %}</div>
                                 </a>
                             </li>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.investors-link }}" data-href="#section-investors">
-                                    <div> {% t index.navbar-investment %}</div>
+                                    <div>{% t index.navbar-investment %}</div>
                                 </a>
                             </li>
                             <li class="sub-menu">
@@ -153,6 +153,8 @@
     	============================================= -->
         <script type="text/javascript" src="{{ base }}/js/jquery.js"></script>
 
+        <!-- Footer Scripts
+        ============================================= -->
         {% include analytics.html %}
         {% include i18n.html %}
     </body>
