remove liquid comment

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -55,7 +55,7 @@
                     <!-- Primary Navigation
 					============================================= -->
                     <nav id="primary-menu" class="not-dark one-page-menu pull-left">
-                        <!-- todo: localize nav, resolve gh-pages ssue with {% t .. %} -->
+                        <!-- todo: localize nav, resolve gh-pages ssue with t tag -->
                         <ul>
                             <li class="primary-menu-item">
                                 <a href="{{ base }}/{{ page.projects-link }}" data-href="#section-work">
