--- a/css/custom.css
+++ b/css/custom.css
@@ -98,7 +98,6 @@ h6 {
 	1. Theme Overrides
 	2. Layout
 	3. Typography
-	4.
 */
 
 /* 1. Theme Overrides
@@ -119,11 +118,6 @@ h6 {
 
 .dark .heading-block:not(.not-dark):after {
 	border: none;
-}
-
-#section-dfinity .col_one_third {
-	width: calc(33.3% - 10rem);
-	margin: 5rem;
 }
 
 .page-section.dark .heading-block h2,
@@ -269,6 +263,31 @@ h6 {
 .bg-stringlabs-dark,
 .bg-stringlabs-dark.full-height {
 	background: url('../images/stringlabs-backdrop-dark.png') 0 0 / cover no-repeat;
+}
+
+#section-dfinity .col_one_third {
+	width: calc(33.3% - 10rem);
+	margin: 5rem;
+}
+
+.page-section a.section-link {
+	display: block;
+	position: absolute;
+	left: 50%;
+	margin-left: -5rem;
+	width: 10rem;
+	height: 2rem;
+	line-height: 2rem;
+	background: #222;
+	text-align: center;
+	bottom: 0;
+	border-top-right-radius: 1rem;
+	border-top-left-radius: 1rem;
+}
+
+.page-section a.section-link > div {
+	width: 100%;
+	height: 100%;
 }
 
 /* 3. Typography
