--- a/css/custom.css
+++ b/css/custom.css
@@ -5,93 +5,6 @@
 	Overwriting Default Theme Styles for Better Hanlding Updates
 -----------------------------------------------------------------*/
 
-.dark .feature-box h3 span.subtitle,
-.team-title span {
-    color: #75DB3C;
-}
-
-.dark .feature-box h3 span.subtitle {
-	font-family: 'Raleway', sans-serif;
-	font-style: italic;
-}
-
-.feature-box h3 {
-	font-size: 19px;
-}
-
-.font-body { font-family: 'Raleway', sans-serif !important; }
-
-.font-primary { font-family: 'Raleway', sans-serif !important; }
-
-.font-secondary { font-family: 'Raleway', sans-serif !important; }
-
-body {
-	font-family: 'Raleway', sans-serif;
-}
-
-a {
-	color: #308B16;
-}
-
-.button {
-	background-color: #308B16;
-}
-
-/* fucker not working. todo fix this */
-.button.button-dark:hover { background-color: #75DB3C; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	font-family: 'Raleway', sans-serif;
-}
-
-#primary-menu ul li > a {
-	font-family: 'Raleway', sans-serif;
-}
-
-#logo #string-vector {
-	height: 93px;
-	-webkit-transition: height .4s ease, opacity .3s ease;
-	-o-transition: height .4s ease, opacity .3s ease;
-	transition: height .4s ease, opacity .3s ease;
-}
-
-#header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo #string-vector {
-	margin-top: 14px;
-	height: 35px;
-	margin-bottom: 4px;
-}
-
-.dark #header.transparent-header.full-header:not(.sticky-header) #header-wrap:not(.not-dark) #logo,
-#header.transparent-header.full-header.dark:not(.sticky-header) #header-wrap:not(.not-dark) #logo {
-	border-right: 0px;
-}
-
-
-#logo {
-	font-family: 'Raleway', sans-serif;
-}
-
-#header.full-header #logo {
-	border-right: 0px;
-}
-
-#header.full-header #primary-menu > ul {
-	padding-right: 15px;
-	margin-right: 0px;
-	border-right: 0px;
-}
-
-.disabled {
-    pointer-events: none;
-    cursor: default;
-    opacity: 0.3;
-}
-
 /*
 	Redesign (Benny)
 	Table of Contents:
@@ -183,6 +96,7 @@ h6 {
 
 #header .container {
 	position: static;
+	padding: 0;
 }
 
 #header.transparent-header.full-header #header-wrap {
@@ -258,30 +172,41 @@ h6 {
 	clear: both;
 }
 
-#primary-menu ul {
+#header #header-wrap #primary-menu > ul {
 	padding: 0;
+	border: none;
 }
 
-#primary-menu ul > li {
+#primary-menu > ul > li {
 	float: none;
 	margin-left: 0;
 }
 
-#primary-menu ul > li.sub-menu {
+#primary-menu > ul > li.sub-menu {
 	position: fixed;
 	bottom: 1rem;
 }
 
-#primary-menu ul > li.sub-menu a .subtitle {
+#primary-menu > ul > li.sub-menu a .subtitle {
 	color: white;
 	text-transform: lowercase;
 }
 
-#primary-menu ul li > a {
+#primary-menu > ul li > a {
 	padding: 0;
 	font-weight: 200;
 	font-size: 0.7em;
 	text-shadow: 0 1px 1rem rgba(0, 0, 20, 0.4);
+}
+
+#header-wrap {
+	background: rgba(0, 0, 0, 0.25);
+	padding: 2rem;
+	min-height: 18rem;
+}
+
+#header #header-wrap #logo {
+	border: none;
 }
 
 /* 3. Layout
