fixed left nav styles, overflow/scroll styles

--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -42,7 +42,7 @@
 
         <!-- Header
 		============================================= -->
-        <header id="header" class="transparent-header full-header page-section dark pull-left">
+        <header id="header" class="full-header pull-left">
 
             <div id="header-wrap">
 
