--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -2,7 +2,7 @@
 layout: default
 projects-link: "#section-work"
 team-link: "#section-team"
-investors-link: "#section-investors"
+investment-link: "#section-investment"
 contact-link: "#section-contact"
 disable-news-link: false
 hero: false
@@ -52,14 +52,14 @@ hero: false
                             </div>
                             <div class="panel-body">
                                 <div class="author-image">
-                                    
+
                                     <img src="{{ base }}/images/team/{{ author.avatar }}" alt="{{ author.display_name }}" class="img-circle">
                                 </div>
                                 {{ page.author-bio }}
                             </div>
                         </div><!-- Post Single - Author End -->
 
-                        <div class="line"></div>                        
+                        <div class="line"></div>
                     </div>
                 </div>
             </div>
