--- a/_layouts/outer.html
+++ b/_layouts/outer.html
@@ -78,7 +78,7 @@
                                 </a>
                             </li>
                             <li class="primary-menu-item">
-                                <a href="#" data-href="#section-investors">
+                                <a href="#" data-href="#section-investment">
                                     <div class="scrollto-link">{% t index.navbar-investment %}</div>
                                 </a>
                             </li>
